// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoanAction creates a List.Item for each action 1`] = `
<LoanActions
  actions={
    Object {
      "action": "url",
      "anotheraction": "another-url",
    }
  }
  data={Object {}}
  onAction={[Function]}
>
  <List
    horizontal={true}
  >
    <div
      className="ui horizontal list"
      role="list"
    />
  </List>
</LoanActions>
`;

exports[`LoanAction renders initial state and checks the props are passed 1`] = `
<LoanActions
  actions={Object {}}
  data={Object {}}
  onAction={[Function]}
>
  <List
    horizontal={true}
  >
    <div
      className="ui horizontal list"
      role="list"
    />
  </List>
</LoanActions>
`;

exports[`LoanAction renders loader on action triggered 1`] = `
<LoanActions
  actionLoading={true}
  actions={Object {}}
  data={Object {}}
  onAction={[Function]}
>
  <List
    horizontal={true}
  >
    <div
      className="ui horizontal list"
      role="list"
    />
  </List>
</LoanActions>
`;
